# vertex-feature-store-example

./: .gitignore  README.md  pyproject.toml  tasks.py
scripts/: ingest_dataset.py  prepare_dataset.py
terraform/: .terraform.lock.hcl  feature_store.tf  main.tf
