[tool.poetry]
name = "vertex-feature-store-example"
version = "0.1.0"
description = ""
authors = ["amaotone <amane.suzu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.1"
google-cloud-aiplatform = "^1.11.0"
pandas-gbq = "^0.17.4"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
